# rectangle_planner

./: .gitignore  README.md
AG/: CMakeLists.txt  main.cpp  utility.cpp  utility.h
AG/AGtools/: AGtools.cpp  AGtools.h  AlleleSet.cpp  Objective.cpp  Objective.h  ObjectivePenalty.cpp  ObjectivePenalty.h
AG/Board/: Board.cpp  Board.h  BoardList.cpp  BoardList.h  BoardLocation.cpp  BoardLocation.h
data/: example_input1.txt
draw/: board.eps  draw_result.py
report/: plots.m  sprawozdanie.tex
report/dane/: det.txt  rank.txt  rul.txt  tur.txt  tur01.txt  tur05.txt  tur1.txt
src/: Board.cpp  Board.h  BoardGenome.cpp  BoardGenome.h  BoardList.cpp  BoardList.h  BoardLocation.cpp  BoardLocation.h  CMakeLists.txt  Objective.cpp  Objective.h  ObjectiveHelper.cpp  ObjectiveHelper.h  main.cpp  utility.cpp  utility.h
test/: CMakeLists.txt  main.cpp
